2008-08-21  Sébastien Granjoux  <seb.sfo@free.fr>

	* manuals/anjuta-manual/C/debugger.xml,
	(deleted) manuals/anjuta-manual/C/figures/arguments.png,
	manuals/anjuta-manual/C/projects.xml,
	manuals/anjuta-manual/Makefile.am:
	Update debugger documentation

2008-08-21  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/command.c,
	plugins/gdb/plugin.c,
	libanjuta/interfaces/libanjuta.idl:
	Keep const gchar* instead of GFile in debugger interface

	* libanjuta/libanjuta.h,
	libanjuta/Makefile.am:
	All public libanjuta header files should be included in libanjuta.h
	Install anjuta-version.h too

	* (removed) libanjuta/libanjuta-2.0.pc:
	Fix #546109 - Spurious libanjuta-2.0.pc file

2008-08-21  Johannes Schmid  <jhs@gnome.org>

	* plugins/message-view/plugin.c (activate_plugin),
	(deactivate_plugin), (ianjuta_msgman_add_view):
	* plugins/message-view/plugin.h:
	* plugins/symbol-db/symbol-db-engine.c (sdb_engine_finalize):

2008-08-20  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/build-options.c:
	#548622 – sun cc can not compile build-options.c

2008-08-20  Johannes Schmid  <jhs@gnome.org>

	* configure.in:
	* manuals/reference/libanjuta/writing-plugins-vala.sgml:
	* manuals/reference/libanjuta/libanjuta-docs.sgml:
	Removed Vala leftovers (#548629)

	* plugins/build-basic-autotools/build-options.c:
	#548622 – sun cc can not compile build-options.c

2008-08-20  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-db/symbol-db-engine.c
	(sdb_engine_populate_db_by_tags):
	Fixed a crasher in symbol-db due to use of uninitialised memory

=== anjuta 2.5.90 ===

2008-08-18  Naba Kumar  <naba@gnome.org>

	* NEWS: Updated for release
	* configure.in: Updated version to 2.5.90
	* configure.in: Fixed make distcheck

2008-08-18  Johannes Schmid  <jhs@gnome.org>

	* plugins/search/search-replace_backend.c (get_next_match):
	Use uf8_strlen instead of strlen to avoid selection problem with
	non-ASCII search strings (see #440637 comment 15)
