@@ -757,224 +757,4 @@
    </sect2>
   </sect1>
   
-  <sect1 id="project-build">
-   <title>Compiling and Building</title>
-   <sect2 id="project-basics">
-    <title>Overview</title>
-    <para>
-     An executable for a project is generated in two steps:
-    </para>
-    <para>
-     <orderedlist>
-      <listitem><para>Compiling</para></listitem>
-      <listitem><para>Linking</para></listitem>
-     </orderedlist>
-    </para>
-    <para>
-     These steps are collectively known as <emphasis>Building</emphasis>. Some other
-     steps may also be involved in the build process, but for the sake of
-     simplicity, we will only look at these two steps.
-    </para>
-    <para>
-     <emphasis>Compiling</emphasis> is the step in which object files are generated from 
-	 their corresponding source files. For instance, a source file <filename>hello.c</filename>
-	 will generate <filename>hello.o</filename> after compilation. Usually you do not need 
-	 to worry about these object files &mdash; just think of them as intermediate files 
-	 involved in creating the final executable.
-    </para>
-    <para>
-     Once the object files (<filename>*.o</filename> files) are ready, they are all linked 
-	 together (along with any libraries) to generate the final executable. This step is 
-     called <emphasis>Linking</emphasis>.
-    </para>
-   </sect2>
-   <sect2 id="compiling-project">
-    <title>Compiling the source</title>
-    <para>
-     In a project, the individual source files can be compiled separately into objects 
-	 (<filename>*.o</filename> files). Although you do not have to worry about these object 
-	 files, sometimes it is handy to compile a file first (for example, to make sure there are 
-	 no syntax errors). Building a whole project can take a lot of time, especially in the case of 
-	 larger and more complex applications. Therefore, you will probably go through a series of 
-	 edit-compile-edit-compile-.... loops while a developing the project.
-    </para>
-    <para>
-     To compile a file, choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-     <guimenuitem>Compile</guimenuitem></menuchoice> or  press <keycap>F11</keycap>.
-     This will compile the active file.
-    </para>
-   </sect2>
-   <sect2 id="building-exec">
-    <title>Building an executable</title>
-    <para>
-     <application>Anjuta</application> has no separate link command, simply because 
-	 it is not necessary. The build process will compile all the source files and link them together 
-	 along with the libraries. The build command will note recompile those files which are 
-	 already up-to-date (this is called the <emphasis>dependency check</emphasis>). 
-     If you have already compiled all of the files individually, then the only thing the build 
-	 step performs is the link. If you have already built the project and no dependent file has been 
-     modified, even the link stage will be skipped.
-    </para>
-    <para>
-     So how exactly does the dependency check influence the project development? 
-     If you have modified a file, then all of the source files that depend on the modified 
-	 file are recompiled. All files (not only the object files and executable) in the 
-     project are checked for these dependencies during the build process. If it is found that 
-	 a particular file is dependent on some other file which has been modified, then that file 
-	 will be re-generated.
-    </para>
-    <para>
-     Since you have now got a rough understanding of the value of the dependency check, can 
-	 you imagine how your life (as a programmer) would be if it had not been there? If you 
-	 cannot answer just yet, then will find out when you start developing big projects!
-    </para>
-    <para>
-     <menuchoice><guisubmenu>Build</guisubmenu><guimenuitem>Build</guimenuitem></menuchoice> 
-	 will build all of the files in the <filename class="directory">src</filename> (source) 
-	 directory, and generate the executable. <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Build Project</guimenuitem></menuchoice> will build 
-	 the whole project &mdash; all of the subdirectories (including 
-	 <filename class="directory">src</filename>), are built recursively.
-    </para>
-   </sect2>
-   <sect2 id="build-dist">
-    <title>Creating a distribution package</title>
-    <para>
-     To build the tarball distribution of the project choose <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Build Tarball</guimenuitem></menuchoice>. This will create a 
-	 tarball (<filename>*.tar.gz</filename>) and put it in the top level project directory. 
-	 Copy the file to a safe place for distribution.
-    </para>
-   </sect2>
-   <sect2 id="build-install">
-    <title>Install</title>
-    <para>
-     Choosing the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Install</guimenuitem></menuchoice> will install the generated 
-	 application on your system. 
-    </para>
-	<note>
-	 <title>System wide installation</title>
-	 <para>
-	 You must be logged in as root to perform a system-wide install. Also note that for a GNOME 
-     application to use the pixmaps in the project, it must be installed as a system-wide 
-	 application. Otherwise, when the application is executed in your project, there will be 
-	 lots of &quot;pixmap not found&quot; errors. You can configure anjuta to use <command>sudo</command>
-	or <command>su</command> before installing the project in the build preferences.
-	 </para>
-	</note>
-   </sect2>
-   <sect2 id="configure">
-    <title>Configure</title>
-    <para>
-     To run the <filename>configure</filename> script found in the top level project directory, 
-	 choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Run Configure&hellip;</guimenuitem></menuchoice>. The script will determine the system
-     configuration and create some of the files required to perform a build (such as 
-	 <filename>Makefile</filename> and <filename>config.h</filename>). This is necessary because 
-	 the application may depend on specific configuration of some of these options.
-	</para> 
-	<important>
-	 <title>When to run configure</title>
-	<para>
-     Until you run <filename>configure</filename>, you cannot start building the 
-	 project.
-    </para>
-	</important>
-    <para>
-     The <filename>configure</filename> script is (usually) run only once at the beginning of 
-	 the first build process &mdash; for example, just after you have extracted a source tarball 
-	 of a project distribution. After that, configuration is automatically handled by the 
-	 subsequent build processes. If you have used the <emphasis>Application Wizard</emphasis> 
-	 to create the application, then you will not need to run <filename>configure</filename> 
-	 separately: the wizard will run it as a part of the project generation process.
-    </para>
-    <para>
-     You can also supply additional options to the configuration script. After choosing the 
-	 <guimenuitem>Run Configure&hellip;</guimenuitem> menu item, a dialog will appear to prompt for additional 
-	 options.
-    </para>
-     <figure>
-       <title>Configure options dialog</title>
-       <screenshot>
-	   <screeninfo>Configure options dialog</screeninfo>
-        <graphic fileref="figures/configure_dlg.png" format="PNG" srccredit="jhs"></graphic>
-       </screenshot>
-     </figure>
-    <para>
-     Enter any options (or leave it blank to accept the defaults) and click 
-	 <guibutton>OK</guibutton>. To find out the options available to the 
-	 <filename>configure</filename> script, enter <userinput>--help</userinput> 
-	 in the option entry box and click <guibutton>OK</guibutton>. The options will be displayed 
-	 in the <interface>Message window</interface>.
-    </para>
-    <para>
-     There is no requirement to run <filename>configure</filename> only once. It can be 
-	 run at any time, usually when the configuration options need to be changed. One thing to 
-	 note is that, if the <filename>config.h</filename> file in the top level directory is 
-	 changed, running <filename>configure</filename> again will not overwrite it.
-    </para>
-   </sect2>
-   <sect2 id="auto-generation">
-    <title>Auto generate</title>
-    <para>
-     Auto generation consists of two steps: running <application>automake</application> and 
-	 then running <application>autoconf</application>. If an executable 
-	 <filename>autogen.sh</filename> script is found in the top level project 
-	 directory, this file will be executed instead of the two steps.
-     Like <emphasis>configuration</emphasis>, auto generation is automatically handled 
-	 by the build process. It can also be run in cases where it is difficult to configure 
-	 the project (such as lots of errors reported due to mis-synchronization after modifying 
-	 lots of build files). 
-	</para>
-	<note>
-	<title>When to run autogen.sh</title>
-	<para> 
-	 Unlike configuration, auto generation does not need to be run even 
-	 once &mdash; in fact, it does not need to be run at all! The option is available because it 
-	 can be handy in some circumstances.
-    </para>
-	</note>
-    <para>
-     Choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Run Autogenerate&hellip;</guimenuitem></menuchoice> to auto generate the project.
-    </para>
-    <para>
-     Read the info pages of <ulink type="info" url="info:automake"><application>automake</application></ulink> 
-	 and <ulink type="info" url="info:autoconf"><application>autoconf</application></ulink> for more 
-	 details on how these tools work.
-    </para>
-   </sect2>
-   <sect2 id="build-clean">
-    <title>Clean</title>
-    <para>
-     This option cleans the project and leaves it in a state that requires 
-	 <guimenuitem>Build Project</guimenuitem> to be performed. It deletes all of the 
-	 files generated by the build process, including all object files 
-	 (<filename>*.o</filename> files) and the executable(s) in the 
-	 <filename class="directory">src</filename> directory (and other directories). 
-    </para>
-    <para>
-     Choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Clean</guimenuitem></menuchoice> to clean the project.
-    </para>
-   </sect2>
-   <sect2 id="build-cleanall">
-    <title>Clean Project</title>
-    <para>
-     There is not a great deal to say about <guimenuitem>Clean Project</guimenuitem> (which might 
-	 also be called <emphasis>Clean distribution</emphasis>, or <emphasis>clean dist</emphasis> 
-	 for short). It cleans the project and leaves it in a state that requires 
-	 <guimenuitem>Run Configure&hellip;</guimenuitem> and <guimenuitem>Build Project</guimenuitem> to be 
-	 performed. It deletes all of the files generated by the build processes, including all the
-     object files (<filename>*.o</filename> files), executable(s) and Makefiles. In other 
-	 words, it leaves the project as though it has just been extracted from a distribution 
-	 tarball.
-    </para>
-    <para>
-     Choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Clean Project</guimenuitem></menuchoice> to completely clean the project.
-    </para>
-   </sect2>
-  </sect1>
  </chapter>
